 * Added a link to Mantis at the bottom of the pages.
 * Added support for date_order field for version.
 * Added delete file capability.
 * Added view all projects capability.
 * Added support to move bugs from one project to another.
 * Removed site_settings pages.
 * Removed unused cookie variables.
 * Removed sql_to_unix_time() function.  Unecessary with removal of TIMESTAMPS.
 * Removed menu_inc.php file and related variable.  Moved this into print_menu()
 * Renamed g_store_file_to to g_file_upload_method.

12.01.2001  -   0.16.1

 * Fixed SQL error when reporting bug in a private project.
 * Fixed problem where upgrade scripts were not executed for 0.16.0 upgrade.
 * Fixed problem with $g_limit_reporters limiting all users instead of just reporters and below
 * Modified admin_check.php3 to be more informative and useful.
 * Modified upgrade script to preserve timestamp fields.
 * Modified db_generate to enable projects by default.
 * Modified account_page.php3 to remove EOF usage.
 * Updated upgrade script to be more informative.
 * Updated French localization.
 * Added $g_allow_close_immediately to toggle "close immediately" option when resolving a bug.

11.27.2001  -   0.16.0

 * Fixed minor HTML errors in core_html_API.php.
 * Fixed the view, report, and update pages to honor the forces advanced/simple modes.
 * Fixed problem with extra br tags being inserted in project descriptions
 * Fixed table names in the proj_doc_* pages to use variables instead of hardcoded names.
 * Fixed table names in bug_file_add.php3, report_add.php3, view_bug_advanced_page.php3, view_bug_page.php3 to use variables instead of hardcoded names.
 * Fixed a problem with bug updates making the status hard to deal with.
 * Fixed the emailing method to honor the private access threshold.
 * Fixed problem where reporters could assign bugs in advanced report page.
 * Fixed problem where not all proj_doc* pages had the top of page include.