@@ -26,7 +26,8 @@ Mantis
  * Removed site_settings pages.
  * Removed unused cookie variables.
  * Removed sql_to_unix_time() function.  Unecessary with removal of TIMESTAMPS.
- * Removed menu_inc.php file and related variable.  Moved this into print_menu()
+ * Removed menu_inc.php file and related variable.  Moved this into print_menu().
+ * Removed print_mantis_version().  Moved it into print_foooter().
  * Renamed g_store_file_to to g_file_upload_method.
 
 12.01.2001  -   0.16.1
